Treble bleed enhancements